--- a/index.html
+++ b/index.html
@@ -10,4 +10,12 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <style>
+      html, body, #app {
+          margin: 0;
+          padding: 0;
+          height: 100%;
+          width: 100%;
+      }
+  </style>
 </html>
